--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+#*.log
 local_settings.py
 db.sqlite3
 
@@ -115,4 +115,3 @@ dmypy.json
 .DS_Store
 main.py
 reports/
-#src/logging/logs/
